--- a/WEB-115 Labs (Web Markup and Scripting)/Lab 14 - Final Project/finalProject.html
+++ b/WEB-115 Labs (Web Markup and Scripting)/Lab 14 - Final Project/finalProject.html
@@ -8,11 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <header>
         <img src="banner.png" alt="">
     </header>
+    
     <form id="mealPlanForm">
-        <fieldset>
+
+        <fieldset class="personal-info">
             <legend>Personal Information</legend>
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
@@ -21,7 +24,8 @@
             <label for="goal">Goal for the week:</label>
             <input type="text" id="goal" name="goal" required>
         </fieldset>
-        <fieldset>
+
+        <fieldset class="meal-info">
             <legend>Meal Plan</legend>
 
             <div class="day">
